--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.0.14",
     "postcss-cli": "^11.0.0",
